[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/characters/Minion.gd" type="Script" id=1]
[ext_resource path="res://scenes/characters/components/HealthBar.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[node name="Minion" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8 )
playing = true

[node name="Range" type="Area2D" parent="."]
position = Vector2( 0, -6 )

[node name="Area" type="CollisionShape2D" parent="Range"]

[node name="HealthBar" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -16 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
